fix date links being difficult to read in dark mode

--- a/css/app.css
+++ b/css/app.css
@@ -260,6 +260,10 @@ button:disabled {
     border-radius: 5px;
 }
 
+.dateRangeLink {
+    color: inherit;
+}
+
 .aboutContainer h2,
 h3 {
     padding-top: 0.25em;
